--- a/indexStyles.css
+++ b/indexStyles.css
@@ -180,10 +180,11 @@ header {
 }
 
 .footer p {
-  font-size: 16px;
+  font-size: 20px;
   line-height: 1.6;
   margin: 0 auto;
   max-width: 800px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 /* footer image */
