--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: normal;
-    color: black;
+    color: white;
+    background-color: #586a8e;
 }
 
-header {
+.header {
     background: teal ;
     color: white;
     text-align: center;
 }
 
+/* Nikhil Added */
+.aboutusheader{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 50px;
+    background-color: #4b556a;
+    color: white;
+}
