--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: normal;
-    color: white;
     background-color: #586a8e;
 }
 
@@ -19,6 +18,19 @@ body {
     padding-right: 50px;
     background-color: #4b556a;
     color: white;
+}
+
+.about-body{
+    display: flex;
+    flex-direction: column;
+    margin: 0% 10% 0% 10%;
+    background-color: white;
+    padding-bottom: 10%;
+    
+}
+
+.about-body h2,p,h3{
+    padding: 0% 10% 0% 10%;
 }
 
 
