--- a/indexStyles.css
+++ b/indexStyles.css
@@ -227,6 +227,7 @@ header {
     flex-direction: column;
     gap: 20px;
     padding: 0;
+    align-items: center;
   }
 
   .testimonial {
@@ -279,28 +280,32 @@ header {
 
 /* Services Grid */
 .services-conatiner {
-  width: 80%;
-  margin: auto;
+
   display: flex;
   justify-content: space-between;
-  /* flex-wrap: wrap; */
-  padding: 40px 0;
+  gap: 3%;
+  padding: 40px 20px 30px 20px;
+}
+@media (max-width: 768px) {
+  .services-conatiner{
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .services-conatiner > .card {
   background: #f4f4f4;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  overflow: hidden;
   width: 30%;
   text-align: center;
   padding: 20px;
   margin-bottom: 20px;
-  margin: 20px;
+  
 }
 @media (max-width: 768px) {
   .services-conatiner > .card {
     margin: 10px;
+    width: 60%;
   }
   
 }
