--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 
 
 /* header & nav */
+/*copied from indexStyles.css */
 .header {
     display: flex;
     justify-content: space-between;
@@ -67,6 +68,7 @@ body {
 
 
   /* footer */
+  /*copied from indexStyles.css */
 .footer {
     color: #fff;
     text-align: center;
@@ -99,6 +101,7 @@ body {
 
 
 /* for small screens */
+/*copied from indexStyles.css */
 @media (max-width: 768px) {
     .header {
       flex-direction: column;
