--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 }
   
 
-
+/* --------------------------------------------------------------- */
 
 /* header & nav */
 /*copied from indexStyles.css */
